*First step of attempting to fix the rarely despawning vehicles
+Added config option to control whether vehicles can destroy blocks or not